[gd_scene load_steps=11 format=3 uid="uid://ss2xikvy6bt7"]

[ext_resource type="Script" path="res://worm/worm_segment.gd" id="1_uf7xy"]
[ext_resource type="Texture2D" uid="uid://dca0wcvf7auln" path="res://worm/segment-walk1.png" id="2_a5yre"]
[ext_resource type="Texture2D" uid="uid://fsoeijujxmy5" path="res://worm/segment-walk2.png" id="3_ejrf1"]
[ext_resource type="Texture2D" uid="uid://bobv50cj7vfr6" path="res://worm/segment-walk3.png" id="4_5j156"]
[ext_resource type="Texture2D" uid="uid://bfuivwhhj5fjg" path="res://worm/segment-outline.png" id="5_amkpd"]
[ext_resource type="Texture2D" uid="uid://b0rc5xm2pb8pk" path="res://worm/segment-body.png" id="6_iebpy"]
[ext_resource type="Texture2D" uid="uid://csxipffvdith0" path="res://worm/segment-top.png" id="7_uvbwv"]
[ext_resource type="Texture2D" uid="uid://6h1ew214snop" path="res://effects/hit.png" id="8_c6u01"]

[sub_resource type="SpriteFrames" id="SpriteFrames_okwhj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_a5yre")
}, {
"duration": 1.0,
"texture": ExtResource("3_ejrf1")
}, {
"duration": 1.0,
"texture": ExtResource("4_5j156")
}, {
"duration": 1.0,
"texture": ExtResource("3_ejrf1")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_alg25"]
radius = 39.0128

[node name="WormSegment" type="RigidBody2D"]
collision_layer = 0
gravity_scale = 0.0
contact_monitor = true
max_contacts_reported = 2
script = ExtResource("1_uf7xy")
metadata/_edit_group_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_okwhj")
frame = 3
frame_progress = 0.813933

[node name="Outline" type="Sprite2D" parent="AnimatedSprite2D"]
z_index = -3
texture = ExtResource("5_amkpd")

[node name="Body" type="Sprite2D" parent="AnimatedSprite2D"]
z_index = -2
texture = ExtResource("6_iebpy")

[node name="Top" type="Sprite2D" parent="AnimatedSprite2D"]
z_index = -1
texture = ExtResource("7_uvbwv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-4, -3)
shape = SubResource("CircleShape2D_alg25")

[node name="GravityPoint" type="Sprite2D" parent="."]
visible = false
scale = Vector2(0.25, 0.25)
texture = ExtResource("8_c6u01")

[node name="JumpTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[connection signal="timeout" from="JumpTimer" to="." method="_on_jump_timer_timeout"]
